<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/random"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/textClock"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <DigitalClock
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/background"
        android:stretchColumns="1,2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/valueName"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:autofillHints="@string/value"
                android:background="@drawable/border2"
                android:gravity="center"
                android:hint="@string/value"
                android:padding="16dp"
                android:text="@string/value"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/value1"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:autofillHints="@string/hint"
                android:background="@drawable/border2"
                android:gravity="center"
                android:hint="@string/hint"
                android:inputType="text"
                android:padding="16dp"
                android:text="@string/random_value1"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/value2"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:autofillHints="@string/hint"
                android:background="@drawable/border2"
                android:gravity="center"
                android:hint="@string/hint"
                android:inputType="text"
                android:padding="16dp"
                android:text="@string/random_value2"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/value3"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:autofillHints="@string/hint"
                android:background="@drawable/border2"
                android:gravity="center"
                android:hint="@string/hint"
                android:inputType="text"
                android:padding="16dp"
                android:text="@string/random_value3"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/value4"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:autofillHints="@string/hint"
                android:background="@drawable/border2"
                android:gravity="center"
                android:hint="@string/hint"
                android:inputType="text"
                android:padding="16dp"
                android:text="@string/random_value4"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/value5"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:autofillHints="@string/hint"
                android:background="@drawable/border2"
                android:gravity="center"
                android:hint="@string/hint"
                android:inputType="text"
                android:padding="16dp"
                android:text="@string/random_value5"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>
</LinearLayout>